fix: can't jump to the correct position when editing number list

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -538,6 +538,8 @@
   .bullet {
     @apply rounded-full w-[6px] h-[6px];
 
+    font-size: 14px;
+
     background-color: var(--ls-block-bullet-color, #394b59);
     transition: transform 0.2s;
 
